# fan-control

./: .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .prettierignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV.md  LICENSE  Makefile  README.md  RELEASE_CHANGELOG.md  TROUBLESHOOTING.md  VERSION  build.ps1  build.rs  cargo-sources.json  config1.toml  flatpak-cargo-generator.py  flatpak_schema.json  format.sh  hardware.toml  justfile  manifest.xml  new_release.sh  rust-toolchain.toml
.cargo/: config.toml
.config/: Noned.toml  config1.toml  config2.toml  config3.toml  config4.toml  fake.toml  fakef.toml  hardware.toml  lin.toml  settings.toml  test.toml  win.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  flatpak_bundle.yml  format.yml  nightly.yml  prettier.yml  release.yml  test.yml  upload_artifacts.yml
LibreHardwareMonitorWrapper/: HardwareManager.cs  LibreHardwareMonitorWrapper.csproj  Program.cs  Server.cs  State.cs
LibreHardwareMonitorWrapper/Hardware/: BaseHardware.cs  Control.cs  LHM.cs  Sensor.cs
common/: Cargo.toml  build.rs
common/src/: lib.rs
config/: config.json  config.toml  config1.json  config1.toml  config2.toml  gpt_upgrade.toml  hardware.json  hardware.toml
configs-examples/: lin.toml  settings.toml  test-locale.toml  win.toml
data/: Cargo.toml  README.md  i18n.toml
data/src/: app_graph.rs  args.rs  boilerplate.rs  cli.rs  dir_manager.rs  directories.rs  hardware.rs  id.rs  items.rs  lib.rs  localize.rs  name_sorter.rs  node.rs  serde_helper.rs  serde_test.rs  settings.rs  test.rs  update.rs  utils.rs
data/src/config/: control.rs  custom_temp.rs  fan.rs  flat.rs  graph.rs  linear.rs  mod.rs  serde_test.rs  target.rs  temp.rs
data/src/config/utils/: affine.rs
data/src/sensors/: libre_hardware_monitor.rs
data/src/serde/: hardware.rs  mod.rs  test.rs
experimental/: Cargo.toml
experimental/src/: main.rs
fan-control-app/: Cargo.toml  README.md  notes.txt
fan-control-app/src/: main.rs  transforms.rs
fan-control-app/src/analysis/: plot.rs  plot_page.rs
fan-control-app/src/schematic/: interactable.rs  mod.rs  viewport.rs
fan-control-app/src/schematic/atoms/: bounds.rs  lineseg.rs  mod.rs  net_label.rs  port.rs
fan-control-app/src/schematic/atoms/device/: mod.rs
fan-control-app/src/schematic/atoms/device/devicetype/: i.rs  l.rs  mod.rs  pmos.rs  pnp.rs  v.rs
fan-control-app/src/schematic/circuit/: atoms.rs  gui.rs  mod.rs
fan-control-app/src/schematic/layers/: devices.rs
fan-control-app/src/schematic/layers/nets/: mod.rs
fan-control-app/src/schematic/symbols/: mod.rs
fan-control-sensors/: Cargo.toml
fan-control-sensors/src/conf/: hardware.rs
fan-control-tray/: Cargo.toml
hardware/: Cargo.toml  README.md
hardware/LibreHardwareMonitorWrapper/: HardwareManager.cs  LibreHardwareMonitorWrapper.csproj  LibreHardwareMonitorWrapper.sln  Logger.cs  Program.cs  Server.cs  State.cs  TakeLocker.cs
hardware/LibreHardwareMonitorWrapper/Hardware/: BaseHardware.cs  Control.cs  LHM.cs  Sensor.cs
hardware/LibreHardwareMonitorWrapper/Lhm/: Control.cs  HardwareResearcher.cs  Sensor.cs
hardware/src/: fake_hardware.rs  hardware_test.rs  lib.rs  linux.rs  windows.rs
i18n/: data.ftl  ui.ftl
i18n/de/: data.ftl  ui.ftl
i18n/en/: data.ftl  ui.ftl
i18n/fr/: data.ftl  ui.ftl
i18n/it/: data.ftl  ui.ftl
i18n/nl/: data.ftl  ui.ftl
i18n/pt-BR/: data.ftl  ui.ftl
i18n/sv/: data.ftl  ui.ftl
i18n/zh/: data.ftl  ui.ftl
light_enum/: Cargo.toml  Makefile  README.md
light_enum/src/: lib.rs  main.rs
question/: Tu es maintenant un expert.txt  sub_feature_lifetime.txt
res/: fan-control-logo.graphite
res/linux/: 60-fan-control.rules  desktop_entry.desktop  install_rules.sh  metainfo.xml  rules-note.md  udev_rules.md
resource/flatpak/: com.wiiznokes.fan-control.json
resource/linux/: 60-fan-control.rules  com.wiiznokes.fan-control.desktop  com.wiiznokes.fan-control.json  com.wiiznokes.fan-control.metainfo.xml  desktop_entry.desktop  fan-control-udev-install.sh  install_udev_rules.sh  metainfo.xml  rules-note.md  rules.txt  udev_rules.md
scripts/: apply_version_and_changen.sh  github_release.sh  icons.py  pass_tests.sh  release_flathub.sh  update.nu
src/: args.rs  cli.rs  config.rs  example.rs  fake_integrated_test.rs  integrated_test.rs  main.rs
src/conf/: configs.rs  hardware.rs  libre_hardware_monitor.rs  lm_sensors.rs  mod.rs  settings.rs  test.rs
src/sensors/: hardware.rs  libre_hardware_monitor.rs  lm_sensors.rs  mod.rs
tray/: Cargo.toml
tray/src/: main.rs
ui/: .gitignore  Cargo.toml  README.md  arch_notes.txt  build.rs
ui/src/: add_node.rs  config_dialogs.rs  dialogs.rs  drawer.rs  graph.rs  headers.rs  icon.rs  input_line.rs  item.rs  lib.rs  message.rs  node_cache.rs  pick.rs  pick_list_utils.rs  settings_drawer.rs  start_at_login.rs  theme.rs  top_bar.rs  tray.rs  udev_dialog.rs  utils.rs
ui/src/analysis/: mod.rs  viewport.rs
ui/src/my_widgets/: alignment.rs  mod.rs  offset.rs
ui/src/my_widgets/drop_down/: mod.rs  offset.rs
ui/src/my_widgets/floating_element/: anchor.rs  mod.rs  offset.rs
ui/src/schematic/: models.rs
ui/src/schematic/atoms/: cirarc.rs
ui/src/schematic/atoms/device/: deviceinstance.rs  params.rs
ui/src/schematic/atoms/device/devicetype/: c.rs  d.rs  gnd.rs  nmos.rs  npn.rs  r.rs
ui/src/schematic/atoms/nets/: edge.rs  mod.rs  path.rs  vertex.rs
ui/src/schematic/layers/: mod.rs  net_labels.rs
ui/src/schematic/layers/nets/: pathfinding.rs  pruning.rs
ui/src/schematic/symbols/: atoms.rs  gui.rs
ui/src/widgets/: mod.rs
ui/src/widgets/context_menu/: mod.rs  overlay.rs  style.rs  widget.rs
ui/src/widgets/drop_down_menu/: mod.rs  overlay.rs  style.rs  widget.rs
utils/: Cargo.toml  build.rs
utils/src/: lib.rs
