[workspace]
members = ["data", "hardware", "ui"]
resolver = "2"

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wiiznokes/fan-control/"

[package]
name = "fan-control"
version = "0.1.0"
description = "Control your fans with different behaviors"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["/.*", "/justfile", "LICENCE"]

[package.metadata.packager]
before-each-package-command = "cargo build --release"
identifier = "com.wiiznokes.fan-control"
icons = ["resource/app_icon/*"]
resources = ["resource/icons", "resource/windows"]
category = "Utility"


[features]
fake_hardware = ["hardware/fake_hardware"]


[dependencies]
data.workspace = true
ui.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
hardware.workspace = true
crossterm = "0.27.0"

[dev-dependencies]

[workspace.dependencies]
hardware = { path = "hardware" }
data = { path = "data" }
ui = { path = "ui" }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.10"
log = "0.4"
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = "8.0"
i18n-embed-fl = "0.7"
lazy_static = "1.4"
once_cell = "1.18"
thiserror = "1.0"
derive_more = { version = "1.0.0-beta.6", default-features = false, features = [
    "unwrap",
    "display"
] }
# strum = { version = "0.25", features = ["derive"] }

[workspace.dependencies.cargo-packager-resource-resolver]
git = "https://github.com/wiiznokes/cargo-packager.git"
branch = "resource-resolver"
#path = "../cargo-packager/crates/resource-resolver/"
#package = "resource-resolver"
