[workspace]
members = ["data", "hardware", "ui", "utils"]
resolver = "2"

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/wiiznokes/fan-control/"
repository = "https://github.com/wiiznokes/fan-control.git"
keywords = ["fan-control", "lhm", "lmsensors", "sensors", "iced-app"]


[package]
name = "fan-control"
version = "0.1.0"
description = "Control your fans with different behaviors"
exclude = ["/.*", "justfile", "LICENCE"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.packager]
# workarround for making cargo packager happy
version = "2024.6.0"
before-each-package-command = "cargo build --release"
identifier = "io.github.wiiznokes.fan-control"
icons = ["res/windows/app_icon.ico"]
resources = ["res/icons", "res/lhmbuild"]
category = "Utility"

[package.metadata.packager.windows]
allow_downgrades = true

[features]
fake_hardware = ["hardware/fake_hardware"]


[dependencies]
data.workspace = true
ui.workspace = true
thiserror.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
hardware.workspace = true
crossterm = "0.27.0"

[build-dependencies]
winres = "0.1"


[workspace.dependencies]
hardware = { path = "hardware" }
data = { path = "data" }
ui = { path = "ui" }
utils = { path = "utils" }
clap = { version = "4.3", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
log = "0.4"
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = "8.0"
i18n-embed-fl = "0.8"
lazy_static = "1.4"
once_cell = "1.18"
thiserror = "1.0"
derive_more = { version = "1.0.0-beta.6", default-features = false, features = [
    "unwrap",
    "display",
] }
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
# strum = { version = "0.25", features = ["derive"] }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic" }
