[workspace]
members = ["data", "hardware", "ui", "common"]

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/wiiznokes/fan-control/"
repository = "https://github.com/wiiznokes/fan-control.git"
keywords = ["fan-control", "lhm", "lmsensors", "sensors", "iced-app"]


[package]
name = "fan-control"
version = "0.1.0"
description = "Control your fans with different behaviors"
exclude = ["/.*", "justfile", "LICENCE"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.packager]
version = "25.11.0"
identifier = "io.github.wiiznokes.fan-control"
icons = ["res/windows/app_icon.ico"]
resources = ["res/lhmbuild"]
category = "Utility"

[package.metadata.packager.windows]
allow_downgrades = true

[features]
default = ["ui"]
ui = ["dep:ui"]
fake_hardware = ["hardware/fake_hardware"]


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(FAN_CONTROL_FORMAT, values("flatpak"))',
] }

[workspace.dependencies]
hardware = { path = "hardware" }
data = { path = "data" }
ui = { path = "ui" }
common = { path = "common" }

clap = { version = "4", features = ["derive", "string"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.9"
env_logger = "0.11"
log = "0.4"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = "8"
i18n-embed-fl = "0.10"
thiserror = "2"
derive_more = { version = "2", default-features = false, features = [
    "unwrap",
    "display",
] }
crossterm = "0.29"
winres = "0.1"
directories = "6"
light_enum = "0.2"
icu_collator = "2"
icu_provider = { version = "2", features = ["sync"] }
serial_test = "3"
const_format = "0.2"
rand = "0.9"
lm-sensors = { git = "https://github.com/wiiznokes/lm-sensors.git", branch = "pwm" }
ouroboros = "0.18"
tokio = { version = "1", features = ["time"] }
open = "5"
cached = "0.56"
constcat = "0.6"
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
pretty_assertions = "1"
mslnk = "0.1"
anyhow = "1"
fslock = "0.2"
tray-icon = "0.21"
resvg = "0.45"

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# branch = "master"
rev = "6439507aa2d8d7e6a89c0fc016895dc0ab9252d4"
default-features = false
features = [
    # cause seg fault when quitting the app on flatpak
    "wgpu",
    "winit",
    "tokio",
    "multi-window",
    "single-instance",
    "markdown",
    "highlighter",
    "about",
    # todo: re enable when it works on Flatpak
    # "dbus-config",
    #"a11y",
]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic" }
# libcosmic = { git = "https://github.com/wiiznokes/libcosmic", rev = "2dff73b8b2871afca6c65c861954c196818f960f" }
# libcosmic = { git = "https://github.com/edfloreshz-ext/libcosmic" }

[dependencies]
data.workspace = true
ui = { workspace = true, optional = true }
thiserror.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
hardware.workspace = true
crossterm.workspace = true


[build-dependencies]
winres.workspace = true


[profile.release-lto]
inherits = "release"
lto = "fat"
