[package]
name = "common"
version = "0.1.0"
description = "Common functions for fan-control"

authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
cached.workspace = true
constcat.workspace = true
cargo-packager-resource-resolver = { workspace = true, features = [
    "auto-detect-format",
] }
log.workspace = true

