[package]
name = "data"
version = "0.1.0"
description = "Data struct used by fan-control"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
hardware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories = "5.0"
clap.workspace = true
light_enum = "0.2"
log.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
lazy_static.workspace = true
derive_more.workspace = true
thiserror.workspace = true

[dev-dependencies]
serial_test = "2.0"
const_format = "0.2"
env_logger.workspace = true
