[package]
name = "data"
version = "0.1.0"
description = "Data struct used by fan-control"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
hardware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories = "6"
light_enum = "0.2"
log.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
derive_more.workspace = true
thiserror.workspace = true
utils.workspace = true
lexical-sort = "0.3"

[dev-dependencies]
serial_test = "3"
const_format = "0.2"
env_logger.workspace = true
