[package]
name = "data"
version = "0.1.0"
description = "Data struct used by fan-control"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
hardware.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
light_enum.workspace = true
log.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
derive_more.workspace = true
thiserror.workspace = true
common.workspace = true
icu_collator.workspace = true
icu_provider.workspace = true

[dev-dependencies]
serial_test.workspace = true
const_format.workspace = true
env_logger.workspace = true
