[package]
name = "hardware"
version = "0.1.0"
description = "hardware abstraction used by fan-control"
categories = ["hardware-support"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
fake_hardware = ["rand"]


[dependencies]
thiserror.workspace = true
log.workspace = true
serde.workspace = true
rand = { version = "0.8", optional = true }
derive_more.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
serde_json.workspace = true
utils.workspace = true
#num_enum = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
lm-sensors = { git = "https://github.com/wiiznokes/lm-sensors.git", branch = "pwm" }
ouroboros = "0.18"

[dev-dependencies]
env_logger.workspace = true