[package]
name = "ui"
version = "0.1.0"
description = "Ui implementation of fan-control"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[lints]
workspace = true

[dependencies]
data.workspace = true
hardware.workspace = true
log.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
utils.workspace = true
derive_more.workspace = true
tokio = { version = "1", features = ["time"] }
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
branch = "master"
default-features = false
features = [
    # cause seg fault when quitting the app on flatpak
    "wgpu",
    "winit",
    "tokio",
    "multi-window",
    "single-instance",
    "markdown",
    # todo: re enable when it works on Flatpak
    # "dbus-config",
    #"a11y",
]
