[package]
name = "ui"
version = "0.1.0"
description = "Ui implementation of fan-control"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[lints]
workspace = true

[dependencies]
data.workspace = true
hardware.workspace = true
log.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
utils.workspace = true
derive_more.workspace = true
tokio = { workspace = true, features = ["time"] }
open.workspace = true
libcosmic.workspace = true
