[package]
name = "utils"
version = "0.1.0"
description = "Utils for fan-control"

authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
cached = "0.49"
cargo-packager-resource-resolver.workspace = true
log.workspace = true
