[package]
name = "utils"
version = "0.1.0"
description = "Utils for fan-control"

authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
cached = "0.55"
constcat = "0.6"
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
log.workspace = true

